--- a/todo.txt
+++ b/todo.txt
@@ -8,8 +8,8 @@ adicionar automaticamente outra pessoa.
 
 perguntar nome e senha no primeiro login
 
-Separar as listbox com usuario on/Offline
-online pode clicar offline N pode.
+Separar as listbox com usuario on/Offline -- feito
+online pode clicar offline N pode. -- feito
 substituir nome na listbox com nome da pessoa -- feito
 mostrar nome/porta/ip na janela 	-- feito
 
